# ChangeLog for sys-libs/pam
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/pam/ChangeLog,v 1.60 2005/02/02 20:46:14 azarah Exp $

*pam-0.77-r5 (02 Feb 2005)

  02 Feb 2005; Martin Schlemmer <azarah@gentoo.org> +pam-0.77-r5.ebuild:
  Fix permission borkage, bug #74040 (added to stable for all, as its a
  serious bug), thanks to Ulrich Mueller <ulm@kph.uni-mainz.de>.

*pam-0.77-r4 (13 Dec 2004)

  13 Dec 2004; Martin Schlemmer <azarah@gentoo.org> files/pam_env.conf,
  +pam-0.77-r4.ebuild:
  Fix DISPLAY not set for ssh -X.

*pam-0.77-r3 (08 Nov 2004)

  08 Nov 2004; Martin Schlemmer <azarah@gentoo.org> +files/pam_env.conf,
  +pam-0.77-r1.ebuild, +pam-0.77-r3.ebuild:
  Install again pam.d files for rexec, rlogin and rsh. Update
  /etc/security/pam_env.conf to allow su to export DISPLAY and XAUTHORITY if
  needed, bug #69925.

*pam-0.77-r2 (31 Oct 2004)

  31 Oct 2004; Martin Schlemmer <azarah@gentoo.org>
  +files/pam-0.77-console-reset.patch, +pam-0.77-r2.ebuild, pam-0.77.ebuild:
  Fix pam_console_apply -r segfaulting if a group used in
  /etc/security/console.perms are missing, bug #50315

  01 Sep 2004; Travis Tilley <lv@gentoo.org> pam-0.77-r1.ebuild:
  made pam use $(get_libdir) for installing to lib64/lib32

  13 Aug 2004; Robin H. Johnson <robbat2@gentoo.org> pam-0.77-r1.ebuild:
  fix bug #58626, need a newer autoconf.

  30 Jun 2004; Aron Griffis <agriffis@gentoo.org> pam-0.77-r1.ebuild:
  stable on alpha and ia64

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> pam-0.75-r10.ebuild,
  pam-0.75-r11.ebuild, pam-0.75-r7.ebuild, pam-0.75-r8.ebuild,
  pam-0.75-r9.ebuild, pam-0.77-r1.ebuild, pam-0.77.ebuild:
  QA - fix use invocation

  02 Jun 2004; Travis Tilley <lv@gentoo.org> pam-0.77-r1.ebuild:
  stable on amd64

  12 May 2004; Alexander Gabert <pappy@gentoo.org> pam-0.75-r11.ebuild:
  changed hardened-gcc logic to use flag logic
