@@ -1,9 +1,10 @@
 MD5 98613a823c89c1040860b92880332f9d pam-0.77-r3.ebuild 7813
 MD5 737b1d219c8d599538c7d61dc396b94d pam-0.77-r1.ebuild 7480
-MD5 7fb3321c72a4c02fc0c4480260361385 ChangeLog 9034
+MD5 387ad7af71edd93f09c17f98e311bd73 ChangeLog 9206
 MD5 ac45aab13da90aae9947ed2a112ad9a4 pam-0.77.ebuild 7429
 MD5 4f5534ef7373dae1e7e4174e1b015542 pam-0.77-r4.ebuild 7814
 MD5 90aa1597ccb5abaf32b3d0882cfacaa4 pam-0.77-r5.ebuild 7809
+MD5 5236b3cdb8926f86382225b63b23d391 pam-0.77-r6.ebuild 7844
 MD5 1d05f0436f1c273d7862099f309afe4d metadata.xml 156
 MD5 cb547fcc1f1893c82cbf6edcd41a2258 pam-0.77-r2.ebuild 7764
 MD5 d3bdcb58b9fe268620b2c37b9b07d756 files/pam_env.conf 3062
@@ -12,6 +13,7 @@ MD5 028c285db4076f549774c258d0eddcfc files/digest-pam-0.77-r1 201
 MD5 c0fd7f7bf69f4f0effdfc66eed6d6ed2 files/digest-pam-0.77-r4 201
 MD5 028c285db4076f549774c258d0eddcfc files/digest-pam-0.77 201
 MD5 d16cc288cbe97883e380bd2e160d08b8 files/digest-pam-0.77-r5 201
+MD5 b38aa656e6c205427dd4c4ba7d6d3f97 files/digest-pam-0.77-r6 201
 MD5 69f8cfad7f241eb669085eaa753cd9dd files/pam-0.77-console-reset.patch 1826
 MD5 7abfe66b5996b628696d244d462e47b0 files/digest-pam-0.77-r2 201
 MD5 849aa086002eda305d4d6d59a94fadd8 files/pam.d/rexec 457
