@@ -1,0 +1,3 @@
+MD5 be5a470e553ba71c20e9bbc7665f3754 Linux-PAM-0.77.tar.gz 442569
+MD5 f626acfce1f602df0f592b716c0e12f9 pam-0.77-patches-1.7.tar.bz2 115022
+MD5 df71961002b552c0e72c6e4e358f27e1 db-4.1.25.tar.gz 3080234
